--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/plugins/easyimport" >
+    <qresource prefix="/plugins/EasyImport" >
         <file>icon.png</file>
     </qresource>
 </RCC>
